src/App.css
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&family=Yaldevi:wght@200..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&family=Yaldevi:wght@200..700&display=swap');

@font-face {
    font-family: Montserrat;
    src: url("/fonts/Montserrat-Regular.ttf") ;
}

/* @font-face {
    font-family: Montserrat;
    src: url("../public/fonts/Montserrat-SemiBold.ttf") ;
    font-weight: 200 400;
} */

@font-face {
    font-family: Montserrat;
    src: url("/fonts/Montserrat-Bold.ttf") ;
    font-weight: bold;
}


.MuiList-root {
    width: 100%;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Montserrat;
    /* user-select: none; */
}

.MuiTextField-root {
    width: 100%;
}

/* .slide-routes {
    width: 100%;
    overflow-y: auto!important;
    height: 100%;

    .item {
        width: 100%;
        height: 100%;

    }
} */

#root {
    flex: 1;
    display: flex;
    flex-direction: column;
}

form {
    display: contents;
    width: 100%;
}

html {
    scroll-behavior: smooth;
    height: 100%;
}

body {
    overflow-x: hidden;
    height: 100%;
    background-color: #f5f5f5;
}

span {
    font-family: inherit;
}

a {
    text-decoration: none;
    color: inherit
}

#root {
    height: 100%;
}

section {
    display: contents;
}

.MuiPaper-root {
    display: flex;
    flex-shrink: 0
}

.MuiBox-root {
    display: flex;
    flex-shrink: 0
}

.MuiButton-root {
    text-transform: none!important;
}

img {
    object-fit: contain;
}

.MuiTab-root {
    text-transform: none!important;
}

::-webkit-scrollbar {
    width: 5px;
    height: 5px;
  }

  /* ::selection {
    color: white;
    background: #00AFEF
} */

.link {
    cursor: pointer;
    font-weight: bold;
}

.link:hover {
    text-decoration: underline;
}

@media (orientation: portrait) {
    body {
      overflow-x: hidden!important;
    }
  }

